# bin/routers/transactionRoutes.js
@@ -17,4 +17,7 @@ router.post('/set-auto-budget/:pocketId', userAuth.authenticateToken, transactio
 router.post('/transfer', userAuth.authenticateToken, transactionController.initTransfer);
 router.patch('/transfer/:transactionId', userAuth.authenticateToken, transactionController.respondTransfer);
 
+// Scheduled transfer
+router.post('/transfer/schedule', userAuth.authenticateToken, transactionController.setTransferSchedule);
+
 module.exports = router;
